# google-ads-mcp

./: .env.example  .env.tpl  .gitignore  DOKPLOY_PLAN.md  Dockerfile  README.md  SETUP.md  docker-compose.yaml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yaml  generate-tag.yaml  release.yaml
ads_mcp/: coordinator.py  gaql_resources.txt  mcp_header_interceptor.py  server.py  settings.py  update_references.py  utils.py
ads_mcp/resources/: discovery.py  metrics.py  release_notes.py  segments.py
ads_mcp/tools/: _common.py  ad_groups.py  ads.py  ads_keywords.py  asset_groups.py  asset_links.py  assets.py  audiences.py  bid_modifiers.py  bidding_strategies.py  budgets.py  campaigns.py  conversions.py  core.py  experiments.py  geo.py  get_resource_metadata.py  keywords.py  performance_max.py  search.py
chart/: values-dev.yaml  values-prod.yaml  values.yaml
chart/templates/: certificate.yaml  deployment.yaml  ingressroutes.yaml  secret.yaml
tests/: server_test.py  utils_test.py
tests/smoke/: golden_resources_list.json  golden_tools_list.json  smoke_test.py
tests/tools/: search_test.py
